kubernetes/infra/monitoring/grafana/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring
  namespace: grafana
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-gateway
    - name: external
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - monitoring.${cluster_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Host
                value: monitoring.${cluster_domain}

      backendRefs:
        - name: grafana
          port: 80
          weight: 1
